--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -16,9 +16,9 @@ set(DATA_DIR ${CMAKE_SOURCE_DIR}/Testing/Data)
 set(TMP_DIR ${CMAKE_BINARY_DIR}/Testing/Temporary)
 
 set(TEST_CASES
-  sfmCommandLineArgsTest
-  sfmBasicTest
-  sfmTypesTest
+  #sfmCommandLineArgsTest
+  #sfmBasicTest
+  #sfmTypesTest
   sfmPedestrianTest
 )
 
@@ -34,7 +34,7 @@ endforeach()
 # Dont forget its:  add_test(<test name (globally unique) > <exe name> <argument1> <argument2>
 ##################################################################################################
 
-add_test(1File ${EXECUTABLE_OUTPUT_PATH}/sfmCommandLineArgsTest ${DATA_DIR}/input.txt)
-add_test(NoArgs ${EXECUTABLE_OUTPUT_PATH}/sfmBasicTest)
-add_test(NoArgs ${EXECUTABLE_OUTPUT_PATH}/sfmTypesTest)
+#add_test(1File ${EXECUTABLE_OUTPUT_PATH}/sfmCommandLineArgsTest ${DATA_DIR}/input.txt)
+#add_test(NoArgs ${EXECUTABLE_OUTPUT_PATH}/sfmBasicTest)
+#add_test(NoArgs ${EXECUTABLE_OUTPUT_PATH}/sfmTypesTest)
 add_test(Pedestrian ${EXECUTABLE_OUTPUT_PATH}/sfmPedestrianTest)
