Added PedestrianDestinationAttractiveForce() to Pedestrian class, and used in Forces::ResultantForce(). Implemented outline of sfmPartASection4App and sfmPartASection5App. Improved testing of Pedestrian class.

--- a/Code/Lib/CMakeLists.txt
+++ b/Code/Lib/CMakeLists.txt
@@ -20,7 +20,7 @@ set(PHAS0100ASSIGNMENT2_LIBRARY_SRCS
   sfmException.cpp
   sfmTypes.cpp
   sfmPedestrian.cpp
-  #sfmForces.cpp
+  sfmForces.cpp
 )
 
 set(PHAS0100ASSIGNMENT2_LIBRARY_HDRS
