Implemented TargetedPedestrian and DirectionalPedestrian from Pedestrian abstract base class. Functionality of both concrete classes identical for the moment.

--- a/Testing/CMakeLists.txt
+++ b/Testing/CMakeLists.txt
@@ -19,7 +19,8 @@ set(TEST_CASES
   #sfmCommandLineArgsTest
   #sfmBasicTest
   #sfmTypesTest
-  #sfmPedestrianTest
+  sfmTargetedPedestrianTest
+  sfmDirectionalPedestrianTest
 )
 
 foreach(_test_case ${TEST_CASES})
@@ -37,4 +38,5 @@ endforeach()
 #add_test(1File ${EXECUTABLE_OUTPUT_PATH}/sfmCommandLineArgsTest ${DATA_DIR}/input.txt)
 #add_test(NoArgs ${EXECUTABLE_OUTPUT_PATH}/sfmBasicTest)
 #add_test(NoArgs ${EXECUTABLE_OUTPUT_PATH}/sfmTypesTest)
-add_test(Pedestrian ${EXECUTABLE_OUTPUT_PATH}/sfmPedestrianTest)
+add_test(TargetedPedestrian ${EXECUTABLE_OUTPUT_PATH}/sfmTargetedPedestrianTest)
+add_test(DirectionalPedestrian ${EXECUTABLE_OUTPUT_PATH}/sfmDirectionalPedestrianTest)
