Implemented bencmark timing with std::chrono::high_resolution_clock.

--- a/Code/CommandLineApps/CMakeLists.txt
+++ b/Code/CommandLineApps/CMakeLists.txt
@@ -17,6 +17,7 @@ set(_command_line_apps
   sfmPartASection5App
   sfmPartBSection6dApp
   sfmPartBSection6eApp
+  sfmPartBSection7aApp
 )
 
 foreach(_app ${_command_line_apps})
